[package]
name = "sgb_initializer"
version = "0.1.2"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
downloader = "0.2.7"
eyre = "0.6"
homedir = "0.3.3"
nu-ansi-term = "0.50.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tempfile = "3.12.0"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
eyre = "0.6"
winres = "0.1.12"

